@@ -16,10 +16,11 @@
 
 package org.gradle.execution.taskgraph;
 
+import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Function;
 import com.google.common.base.Predicate;
-import com.google.common.base.StandardSystemProperty;
 import com.google.common.collect.HashMultimap;
+import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Iterables;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
@@ -27,24 +28,23 @@ import com.google.common.collect.Sets;
 import org.gradle.api.Action;
 import org.gradle.api.BuildCancelledException;
 import org.gradle.api.CircularReferenceException;
+import org.gradle.api.GradleException;
+import org.gradle.api.NonNullApi;
 import org.gradle.api.Project;
 import org.gradle.api.Task;
 import org.gradle.api.Transformer;
 import org.gradle.api.UncheckedIOException;
+import org.gradle.api.file.FileCollection;
 import org.gradle.api.internal.GradleInternal;
 import org.gradle.api.internal.TaskInternal;
 import org.gradle.api.internal.project.ProjectInternal;
-import org.gradle.api.internal.tasks.CachingTaskDependencyResolveContext;
-import org.gradle.api.internal.tasks.TaskContainerInternal;
-import org.gradle.api.internal.tasks.TaskDestroyablesInternal;
-import org.gradle.api.internal.tasks.TaskLocalStateInternal;
+import org.gradle.api.internal.tasks.execution.DefaultTaskProperties;
+import org.gradle.api.internal.tasks.execution.TaskProperties;
+import org.gradle.api.internal.tasks.properties.PropertyWalker;
 import org.gradle.api.specs.Spec;
 import org.gradle.api.specs.Specs;
-import org.gradle.execution.MultipleBuildFailures;
-import org.gradle.execution.TaskFailureHandler;
-import org.gradle.initialization.BuildCancellationToken;
 import org.gradle.internal.Pair;
-import org.gradle.internal.UncheckedException;
+import org.gradle.internal.file.PathToFileResolver;
 import org.gradle.internal.graph.CachingDirectedGraphWalker;
 import org.gradle.internal.graph.DirectedGraph;
 import org.gradle.internal.graph.DirectedGraphRenderer;
@@ -52,73 +52,62 @@ import org.gradle.internal.graph.GraphNodeRenderer;
 import org.gradle.internal.logging.text.StyledTextOutput;
 import org.gradle.internal.resources.ResourceDeadlockException;
 import org.gradle.internal.resources.ResourceLock;
-import org.gradle.internal.resources.ResourceLockCoordinationService;
 import org.gradle.internal.resources.ResourceLockState;
-import org.gradle.internal.work.WorkerLeaseRegistry.WorkerLease;
+import org.gradle.internal.service.ServiceRegistry;
+import org.gradle.internal.work.WorkerLeaseRegistry;
 import org.gradle.internal.work.WorkerLeaseService;
 import org.gradle.util.CollectionUtils;
 import org.gradle.util.Path;
-import org.gradle.util.TextUtil;
 
 import javax.annotation.Nullable;
 import java.io.File;
 import java.io.IOException;
 import java.io.StringWriter;
+import java.util.AbstractCollection;
 import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Deque;
-import java.util.HashMap;
-import java.util.HashSet;
 import java.util.Iterator;
-import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.TreeSet;
-import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.concurrent.atomic.AtomicReference;
-
-import static org.gradle.internal.resources.DefaultResourceLockCoordinationService.unlock;
-import static org.gradle.internal.resources.ResourceLockState.Disposition.*;
 
 /**
- * A reusable implementation of TaskExecutionPlan. The {@link #addToTaskGraph(java.util.Collection)} and {@link #clear()} methods are NOT threadsafe, and callers must synchronize access to these
- * methods.
+ * A reusable implementation of TaskExecutionPlan. The {@link #addToTaskGraph(java.util.Collection)} and {@link #clear()} methods are NOT threadsafe, and callers must synchronize access to these methods.
  */
+@NonNullApi
 public class DefaultTaskExecutionPlan implements TaskExecutionPlan {
-    private final Set<TaskInfo> tasksInUnknownState = new LinkedHashSet<TaskInfo>();
+    private final Set<WorkInfo> workInUnknownState = Sets.newLinkedHashSet();
     private final Set<TaskInfo> entryTasks = new LinkedHashSet<TaskInfo>();
-    private final TaskInfoFactory nodeFactory = new TaskInfoFactory();
-    private final LinkedHashMap<Task, TaskInfo> executionPlan = new LinkedHashMap<Task, TaskInfo>();
-    private final List<TaskInfo> executionQueue = new LinkedList<TaskInfo>();
+    private final WorkInfoMapping workInfoMapping = new WorkInfoMapping();
+    private final List<WorkInfo> executionQueue = Lists.newLinkedList();
     private final Map<Project, ResourceLock> projectLocks = Maps.newHashMap();
-    private final List<Throwable> failures = new ArrayList<Throwable>();
+    private final TaskFailureCollector failureCollector = new TaskFailureCollector();
+    private final TaskInfoFactory nodeFactory;
+    private final TaskDependencyResolver dependencyResolver;
     private Spec<? super Task> filter = Specs.satisfyAll();
 
-    private TaskFailureHandler failureHandler = new RethrowingFailureHandler();
+    private boolean continueOnFailure;
 
-    private final BuildCancellationToken cancellationToken;
-    private final Set<TaskInfo> runningTasks = Sets.newIdentityHashSet();
-    private final Set<Task> filteredTasks = Sets.newIdentityHashSet();
-    private final Map<TaskInfo, TaskMutationInfo> taskMutations = Maps.newIdentityHashMap();
+    private final Set<WorkInfo> runningNodes = Sets.newIdentityHashSet();
+    private final Set<WorkInfo> filteredNodes = Sets.newIdentityHashSet();
+    private final Map<WorkInfo, MutationInfo> workMutations = Maps.newIdentityHashMap();
     private final Map<File, String> canonicalizedFileCache = Maps.newIdentityHashMap();
-    private final Map<Pair<TaskInfo, TaskInfo>, Boolean> reachableCache = Maps.newHashMap();
-    private final Set<TaskInfo> dependenciesCompleteCache = Sets.newHashSet();
-    private final ResourceLockCoordinationService coordinationService;
+    private final Map<Pair<WorkInfo, WorkInfo>, Boolean> reachableCache = Maps.newHashMap();
+    private final Set<WorkInfo> dependenciesCompleteCache = Sets.newHashSet();
     private final WorkerLeaseService workerLeaseService;
     private final GradleInternal gradle;
 
     private boolean tasksCancelled;
 
-    public DefaultTaskExecutionPlan(BuildCancellationToken cancellationToken, ResourceLockCoordinationService coordinationService, WorkerLeaseService workerLeaseService, GradleInternal gradle) {
-        this.cancellationToken = cancellationToken;
-        this.coordinationService = coordinationService;
+    public DefaultTaskExecutionPlan(WorkerLeaseService workerLeaseService, GradleInternal gradle, TaskInfoFactory taskInfoFactory, TaskDependencyResolver dependencyResolver) {
         this.workerLeaseService = workerLeaseService;
         this.gradle = gradle;
+        this.nodeFactory = taskInfoFactory;
+        this.dependencyResolver = dependencyResolver;
     }
 
     @Override
@@ -130,13 +119,18 @@ public class DefaultTaskExecutionPlan implements TaskExecutionPlan {
         return path.toString();
     }
 
+    @VisibleForTesting
+    TaskInfo getNode(Task task) {
+        return workInfoMapping.get(task);
+    }
+
     public void addToTaskGraph(Collection<? extends Task> tasks) {
-        List<TaskInfo> queue = new ArrayList<TaskInfo>();
+        final Deque<WorkInfo> queue = new ArrayDeque<WorkInfo>();
 
         List<Task> sortedTasks = new ArrayList<Task>(tasks);
         Collections.sort(sortedTasks);
         for (Task task : sortedTasks) {
-            TaskInfo node = nodeFactory.createNode(task);
+            TaskInfo node = nodeFactory.getOrCreateNode(task);
             if (node.isMustNotRun()) {
                 requireWithDependencies(node);
             } else if (filter.isSatisfiedBy(task)) {
@@ -146,25 +140,23 @@ public class DefaultTaskExecutionPlan implements TaskExecutionPlan {
             queue.add(node);
         }
 
-        Set<TaskInfo> visiting = new HashSet<TaskInfo>();
-        CachingTaskDependencyResolveContext context = new CachingTaskDependencyResolveContext();
+        final Set<WorkInfo> visiting = Sets.newHashSet();
 
         while (!queue.isEmpty()) {
-            TaskInfo node = queue.get(0);
+            WorkInfo node = queue.getFirst();
             if (node.getDependenciesProcessed()) {
                 // Have already visited this task - skip it
-                queue.remove(0);
+                queue.removeFirst();
                 continue;
             }
 
-            TaskInternal task = node.getTask();
-            boolean filtered = !filter.isSatisfiedBy(task);
+            boolean filtered = !nodeSatisfiesTaskFilter(node);
             if (filtered) {
                 // Task is not required - skip it
-                queue.remove(0);
+                queue.removeFirst();
                 node.dependenciesProcessed();
                 node.doNotRequire();
-                filteredTasks.add(task);
+                filteredNodes.add(node);
                 continue;
             }
 
@@ -172,74 +164,66 @@ public class DefaultTaskExecutionPlan implements TaskExecutionPlan {
                 // Have not seen this task before - add its dependencies to the head of the queue and leave this
                 // task in the queue
                 // Make sure it has been configured
-                ((TaskContainerInternal) task.getProject().getTasks()).prepareForExecution(task);
-                Set<? extends Task> dependsOnTasks = context.getDependencies(task);
-                for (Task dependsOnTask : dependsOnTasks) {
-                    TaskInfo targetNode = nodeFactory.createNode(dependsOnTask);
-                    node.addDependencySuccessor(targetNode);
-                    if (!visiting.contains(targetNode)) {
-                        queue.add(0, targetNode);
+                node.prepareForExecution();
+                node.resolveDependencies(dependencyResolver, new Action<WorkInfo>() {
+                    @Override
+                    public void execute(WorkInfo targetNode) {
+                        if (!visiting.contains(targetNode)) {
+                            queue.addFirst(targetNode);
+                        }
                     }
-                }
-                for (Task finalizerTask : task.getFinalizedBy().getDependencies(task)) {
-                    TaskInfo targetNode = nodeFactory.createNode(finalizerTask);
-                    addFinalizerNode(node, targetNode);
-                    if (!visiting.contains(targetNode)) {
-                        queue.add(0, targetNode);
-                    }
-                }
-                for (Task mustRunAfter : task.getMustRunAfter().getDependencies(task)) {
-                    TaskInfo targetNode = nodeFactory.createNode(mustRunAfter);
-                    node.addMustSuccessor(targetNode);
-                }
-                for (Task shouldRunAfter : task.getShouldRunAfter().getDependencies(task)) {
-                    TaskInfo targetNode = nodeFactory.createNode(shouldRunAfter);
-                    node.addShouldSuccessor(targetNode);
-                }
+                });
                 if (node.isRequired()) {
-                    for (TaskInfo successor : node.getDependencySuccessors()) {
-                        if (filter.isSatisfiedBy(successor.getTask())) {
+                    for (WorkInfo successor : node.getDependencySuccessors()) {
+                        if (nodeSatisfiesTaskFilter(successor)) {
                             successor.require();
                         }
                     }
                 } else {
-                    tasksInUnknownState.add(node);
+                    workInUnknownState.add(node);
                 }
             } else {
                 // Have visited this task's dependencies - add it to the graph
-                queue.remove(0);
+                queue.removeFirst();
                 visiting.remove(node);
                 node.dependenciesProcessed();
             }
         }
-        resolveTasksInUnknownState();
+        resolveWorkInUnknownState();
     }
 
-    private void resolveTasksInUnknownState() {
-        List<TaskInfo> queue = new ArrayList<TaskInfo>(tasksInUnknownState);
-        Set<TaskInfo> visiting = new HashSet<TaskInfo>();
+    private boolean nodeSatisfiesTaskFilter(WorkInfo successor) {
+        if (successor instanceof LocalTaskInfo) {
+            return filter.isSatisfiedBy(((LocalTaskInfo) successor).getTask());
+        }
+        return true;
+    }
+
+    private void resolveWorkInUnknownState() {
+        List<WorkInfo> queue = Lists.newArrayList(workInUnknownState);
+        Set<WorkInfo> visiting = Sets.newHashSet();
 
         while (!queue.isEmpty()) {
-            TaskInfo task = queue.get(0);
-            if (task.isInKnownState()) {
+            WorkInfo workInfo = queue.get(0);
+            if (workInfo.isInKnownState()) {
                 queue.remove(0);
                 continue;
             }
 
-            if (visiting.add(task)) {
-                for (TaskInfo hardPredecessor : task.getDependencyPredecessors()) {
+            if (visiting.add(workInfo)) {
+                for (WorkInfo hardPredecessor : workInfo.getDependencyPredecessors()) {
                     if (!visiting.contains(hardPredecessor)) {
                         queue.add(0, hardPredecessor);
                     }
                 }
             } else {
                 queue.remove(0);
-                visiting.remove(task);
-                task.mustNotRun();
-                for (TaskInfo predecessor : task.getDependencyPredecessors()) {
+                visiting.remove(workInfo);
+                workInfo.mustNotRun();
+                for (WorkInfo predecessor : workInfo.getDependencyPredecessors()) {
                     assert predecessor.isRequired() || predecessor.isMustNotRun();
                     if (predecessor.isRequired()) {
-                        task.require();
+                        workInfo.require();
                         break;
                     }
                 }
@@ -247,186 +231,183 @@ public class DefaultTaskExecutionPlan implements TaskExecutionPlan {
         }
     }
 
-    private void addFinalizerNode(TaskInfo node, TaskInfo finalizerNode) {
-        if (filter.isSatisfiedBy(finalizerNode.getTask())) {
-            node.addFinalizer(finalizerNode);
-            if (!finalizerNode.isInKnownState()) {
-                finalizerNode.mustNotRun();
-            }
-            finalizerNode.addMustSuccessor(node);
-        }
-    }
-
-    private <T> void addAllReversed(List<T> list, TreeSet<T> set) {
-        List<T> elements = CollectionUtils.toList(set);
-        Collections.reverse(elements);
-        list.addAll(elements);
-    }
-
-    private void requireWithDependencies(TaskInfo taskInfo) {
-        if (taskInfo.isMustNotRun() && filter.isSatisfiedBy(taskInfo.getTask())) {
-            taskInfo.require();
-            for (TaskInfo dependency : taskInfo.getDependencySuccessors()) {
+    private void requireWithDependencies(WorkInfo workInfo) {
+        if (workInfo.isMustNotRun() && nodeSatisfiesTaskFilter(workInfo)) {
+            workInfo.require();
+            for (WorkInfo dependency : workInfo.getDependencySuccessors()) {
                 requireWithDependencies(dependency);
             }
         }
     }
 
     public void determineExecutionPlan() {
-        List<TaskInfoInVisitingSegment> nodeQueue = Lists.newArrayList(Iterables.transform(entryTasks, new Function<TaskInfo, TaskInfoInVisitingSegment>() {
-            int index;
+        List<WorkInfoInVisitingSegment> nodeQueue = Lists.newArrayList(Iterables.transform(entryTasks, new Function<TaskInfo, WorkInfoInVisitingSegment>() {
+            private int index;
 
-            public TaskInfoInVisitingSegment apply(TaskInfo taskInfo) {
-                return new TaskInfoInVisitingSegment(taskInfo, index++);
+            @Override
+            @SuppressWarnings("NullableProblems")
+            public WorkInfoInVisitingSegment apply(TaskInfo taskInfo) {
+                return new WorkInfoInVisitingSegment(taskInfo, index++);
             }
         }));
         int visitingSegmentCounter = nodeQueue.size();
 
-        HashMultimap<TaskInfo, Integer> visitingNodes = HashMultimap.create();
+        HashMultimap<WorkInfo, Integer> visitingNodes = HashMultimap.create();
         Deque<GraphEdge> walkedShouldRunAfterEdges = new ArrayDeque<GraphEdge>();
-        Deque<TaskInfo> path = new ArrayDeque<TaskInfo>();
-        HashMap<TaskInfo, Integer> planBeforeVisiting = new HashMap<TaskInfo, Integer>();
+        Deque<WorkInfo> path = new ArrayDeque<WorkInfo>();
+        Map<WorkInfo, Integer> planBeforeVisiting = Maps.newHashMap();
 
         while (!nodeQueue.isEmpty()) {
-            TaskInfoInVisitingSegment taskInfoInVisitingSegment = nodeQueue.get(0);
-            int currentSegment = taskInfoInVisitingSegment.visitingSegment;
-            TaskInfo taskNode = taskInfoInVisitingSegment.taskInfo;
+            WorkInfoInVisitingSegment workInfoInVisitingSegment = nodeQueue.get(0);
+            int currentSegment = workInfoInVisitingSegment.visitingSegment;
+            WorkInfo workInfo = workInfoInVisitingSegment.workInfo;
 
-            if (taskNode.isIncludeInGraph() || executionPlan.containsKey(taskNode.getTask())) {
+            if (workInfo.isIncludeInGraph() || workInfoMapping.contains(workInfo)) {
                 nodeQueue.remove(0);
-                visitingNodes.remove(taskNode, currentSegment);
-                maybeRemoveProcessedShouldRunAfterEdge(walkedShouldRunAfterEdges, taskNode);
+                visitingNodes.remove(workInfo, currentSegment);
+                maybeRemoveProcessedShouldRunAfterEdge(walkedShouldRunAfterEdges, workInfo);
                 continue;
             }
 
-            boolean alreadyVisited = visitingNodes.containsKey(taskNode);
-            visitingNodes.put(taskNode, currentSegment);
+            boolean alreadyVisited = visitingNodes.containsKey(workInfo);
+            visitingNodes.put(workInfo, currentSegment);
 
             if (!alreadyVisited) {
                 // Have not seen this task before - add its dependencies to the head of the queue and leave this
                 // task in the queue
-                recordEdgeIfArrivedViaShouldRunAfter(walkedShouldRunAfterEdges, path, taskNode);
-                removeShouldRunAfterSuccessorsIfTheyImposeACycle(visitingNodes, taskInfoInVisitingSegment);
-                takePlanSnapshotIfCanBeRestoredToCurrentTask(planBeforeVisiting, taskNode);
-                ArrayList<TaskInfo> successors = new ArrayList<TaskInfo>();
-                addAllSuccessorsInReverseOrder(taskNode, successors);
-                for (TaskInfo successor : successors) {
+                recordEdgeIfArrivedViaShouldRunAfter(walkedShouldRunAfterEdges, path, workInfo);
+                removeShouldRunAfterSuccessorsIfTheyImposeACycle(visitingNodes, workInfoInVisitingSegment);
+                takePlanSnapshotIfCanBeRestoredToCurrentTask(planBeforeVisiting, workInfo);
+
+                for (WorkInfo successor : workInfo.getAllSuccessorsInReverseOrder()) {
                     if (visitingNodes.containsEntry(successor, currentSegment)) {
                         if (!walkedShouldRunAfterEdges.isEmpty()) {
                             //remove the last walked should run after edge and restore state from before walking it
                             GraphEdge toBeRemoved = walkedShouldRunAfterEdges.pop();
-                            toBeRemoved.from.removeShouldRunAfterSuccessor(toBeRemoved.to);
+                            // Should run after edges only exist between tasks, so this cast is safe
+                            TaskInfo sourceTask = (TaskInfo) toBeRemoved.from;
+                            TaskInfo targetTask = (TaskInfo) toBeRemoved.to;
+                            sourceTask.removeShouldSuccessor(targetTask);
                             restorePath(path, toBeRemoved);
                             restoreQueue(nodeQueue, visitingNodes, toBeRemoved);
                             restoreExecutionPlan(planBeforeVisiting, toBeRemoved);
                             break;
                         } else {
-                            onOrderingCycle();
+                            onOrderingCycle(successor, workInfo);
                         }
                     }
-                    nodeQueue.add(0, new TaskInfoInVisitingSegment(successor, currentSegment));
+                    nodeQueue.add(0, new WorkInfoInVisitingSegment(successor, currentSegment));
                 }
-                path.push(taskNode);
+                path.push(workInfo);
             } else {
-                // Have visited this task's dependencies - add it to the end of the plan
+                // Have visited this node's dependencies - add it to the end of the plan
                 nodeQueue.remove(0);
-                maybeRemoveProcessedShouldRunAfterEdge(walkedShouldRunAfterEdges, taskNode);
-                visitingNodes.remove(taskNode, currentSegment);
+                maybeRemoveProcessedShouldRunAfterEdge(walkedShouldRunAfterEdges, workInfo);
+                visitingNodes.remove(workInfo, currentSegment);
                 path.pop();
-                executionPlan.put(taskNode.getTask(), taskNode);
-                Project project = taskNode.getTask().getProject();
-                projectLocks.put(project, getOrCreateProjectLock(project));
+                workInfoMapping.add(workInfo);
 
-                TaskMutationInfo taskMutationInfo = getOrCreateMutationsOf(taskNode);
-
-                for (TaskInfo dependency : taskNode.getDependencySuccessors()) {
-                    getOrCreateMutationsOf(dependency).consumingTasks.add(taskNode);
-                    taskMutationInfo.consumesOutputOf.add(dependency);
+                MutationInfo mutations = getOrCreateMutationsOf(workInfo);
+                for (WorkInfo dependency : workInfo.getDependencySuccessors()) {
+                    getOrCreateMutationsOf(dependency).consumingWork.add(workInfo);
+                    mutations.consumesOutputOf.add(dependency);
                 }
 
-                // Add any finalizers to the queue
-                ArrayList<TaskInfo> finalizerTasks = new ArrayList<TaskInfo>();
-                addAllReversed(finalizerTasks, taskNode.getFinalizers());
-                for (TaskInfo finalizer : finalizerTasks) {
-                    if (!visitingNodes.containsKey(finalizer)) {
-                        nodeQueue.add(finalizerTaskPosition(finalizer, nodeQueue), new TaskInfoInVisitingSegment(finalizer, visitingSegmentCounter++));
+                if (workInfo instanceof LocalTaskInfo) {
+                    LocalTaskInfo taskInfo = (LocalTaskInfo) workInfo;
+                    TaskInternal task = taskInfo.getTask();
+                    Project project = task.getProject();
+                    projectLocks.put(project, getOrCreateProjectLock(project));
+
+                    // Add any finalizers to the queue
+                    for (WorkInfo finalizer : taskInfo.getFinalizers()) {
+                        if (!visitingNodes.containsKey(finalizer)) {
+                            nodeQueue.add(finalizerTaskPosition(finalizer, nodeQueue), new WorkInfoInVisitingSegment(finalizer, visitingSegmentCounter++));
+                        }
                     }
                 }
             }
         }
         executionQueue.clear();
-        executionQueue.addAll(executionPlan.values());
-
+        Iterables.addAll(executionQueue, workInfoMapping);
     }
 
-    private TaskMutationInfo getOrCreateMutationsOf(TaskInfo taskInfo) {
-        TaskMutationInfo mutations = taskMutations.get(taskInfo);
+    @Override
+    public Set<Task> getDependencies(Task task) {
+        TaskInfo node = workInfoMapping.get(task);
+        ImmutableSet.Builder<Task> builder = ImmutableSet.builder();
+        for (WorkInfo taskInfo : node.getDependencySuccessors()) {
+            taskInfo.collectTaskInto(builder);
+        }
+        return builder.build();
+    }
+
+    private MutationInfo getOrCreateMutationsOf(WorkInfo workInfo) {
+        MutationInfo mutations = this.workMutations.get(workInfo);
         if (mutations == null) {
-            mutations = new TaskMutationInfo(taskInfo);
-            taskMutations.put(taskInfo, mutations);
+            mutations = new MutationInfo(workInfo);
+            this.workMutations.put(workInfo, mutations);
         }
         return mutations;
     }
 
-    private void maybeRemoveProcessedShouldRunAfterEdge(Deque<GraphEdge> walkedShouldRunAfterEdges, TaskInfo taskNode) {
-        if (!walkedShouldRunAfterEdges.isEmpty() && walkedShouldRunAfterEdges.peek().to.equals(taskNode)) {
+    private void maybeRemoveProcessedShouldRunAfterEdge(Deque<GraphEdge> walkedShouldRunAfterEdges, WorkInfo workInfo) {
+        GraphEdge edge = walkedShouldRunAfterEdges.peek();
+        if (edge != null && edge.to.equals(workInfo)) {
             walkedShouldRunAfterEdges.pop();
         }
     }
 
-    private void restoreExecutionPlan(HashMap<TaskInfo, Integer> planBeforeVisiting, GraphEdge toBeRemoved) {
-        Iterator<Map.Entry<Task, TaskInfo>> executionPlanIterator = executionPlan.entrySet().iterator();
-        for (int i = 0; i < planBeforeVisiting.get(toBeRemoved.from); i++) {
-            executionPlanIterator.next();
-        }
-        while (executionPlanIterator.hasNext()) {
-            executionPlanIterator.next();
-            executionPlanIterator.remove();
-        }
+    private void restoreExecutionPlan(Map<WorkInfo, Integer> planBeforeVisiting, GraphEdge toBeRemoved) {
+        int count = planBeforeVisiting.get(toBeRemoved.from);
+        workInfoMapping.retainFirst(count);
     }
 
-    private void restoreQueue(List<TaskInfoInVisitingSegment> nodeQueue, HashMultimap<TaskInfo, Integer> visitingNodes, GraphEdge toBeRemoved) {
-        TaskInfoInVisitingSegment nextInQueue = null;
-        while (nextInQueue == null || !toBeRemoved.from.equals(nextInQueue.taskInfo)) {
+    private void restoreQueue(List<WorkInfoInVisitingSegment> nodeQueue, HashMultimap<WorkInfo, Integer> visitingNodes, GraphEdge toBeRemoved) {
+        WorkInfoInVisitingSegment nextInQueue = null;
+        while (nextInQueue == null || !toBeRemoved.from.equals(nextInQueue.workInfo)) {
             nextInQueue = nodeQueue.get(0);
-            visitingNodes.remove(nextInQueue.taskInfo, nextInQueue.visitingSegment);
-            if (!toBeRemoved.from.equals(nextInQueue.taskInfo)) {
+            visitingNodes.remove(nextInQueue.workInfo, nextInQueue.visitingSegment);
+            if (!toBeRemoved.from.equals(nextInQueue.workInfo)) {
                 nodeQueue.remove(0);
             }
         }
     }
 
-    private void restorePath(Deque<TaskInfo> path, GraphEdge toBeRemoved) {
-        TaskInfo removedFromPath = null;
+    private void restorePath(Deque<WorkInfo> path, GraphEdge toBeRemoved) {
+        WorkInfo removedFromPath = null;
         while (!toBeRemoved.from.equals(removedFromPath)) {
             removedFromPath = path.pop();
         }
     }
 
-    private void addAllSuccessorsInReverseOrder(TaskInfo taskNode, ArrayList<TaskInfo> dependsOnTasks) {
-        addAllReversed(dependsOnTasks, taskNode.getDependencySuccessors());
-        addAllReversed(dependsOnTasks, taskNode.getMustSuccessors());
-        addAllReversed(dependsOnTasks, taskNode.getShouldSuccessors());
-    }
-
-    private void removeShouldRunAfterSuccessorsIfTheyImposeACycle(final HashMultimap<TaskInfo, Integer> visitingNodes, final TaskInfoInVisitingSegment taskNodeWithVisitingSegment) {
-        TaskInfo taskNode = taskNodeWithVisitingSegment.taskInfo;
-        Iterables.removeIf(taskNode.getShouldSuccessors(), new Predicate<TaskInfo>() {
-            public boolean apply(TaskInfo input) {
+    private void removeShouldRunAfterSuccessorsIfTheyImposeACycle(final HashMultimap<WorkInfo, Integer> visitingNodes, final WorkInfoInVisitingSegment taskNodeWithVisitingSegment) {
+        WorkInfo workInfo = taskNodeWithVisitingSegment.workInfo;
+        if (!(workInfo instanceof TaskInfo)) {
+            return;
+        }
+        Iterables.removeIf(((TaskInfo) workInfo).getShouldSuccessors(), new Predicate<WorkInfo>() {
+            @Override
+            @SuppressWarnings("NullableProblems")
+            public boolean apply(WorkInfo input) {
                 return visitingNodes.containsEntry(input, taskNodeWithVisitingSegment.visitingSegment);
             }
         });
     }
 
-    private void takePlanSnapshotIfCanBeRestoredToCurrentTask(HashMap<TaskInfo, Integer> planBeforeVisiting, TaskInfo taskNode) {
-        if (taskNode.getShouldSuccessors().size() > 0) {
-            planBeforeVisiting.put(taskNode, executionPlan.size());
+    private void takePlanSnapshotIfCanBeRestoredToCurrentTask(Map<WorkInfo, Integer> planBeforeVisiting, WorkInfo workInfo) {
+        if (workInfo instanceof TaskInfo && !((TaskInfo) workInfo).getShouldSuccessors().isEmpty()) {
+            planBeforeVisiting.put(workInfo, workInfoMapping.size());
         }
     }
 
-    private void recordEdgeIfArrivedViaShouldRunAfter(Deque<GraphEdge> walkedShouldRunAfterEdges, Deque<TaskInfo> path, TaskInfo taskNode) {
-        if (!path.isEmpty() && path.peek().getShouldSuccessors().contains(taskNode)) {
-            walkedShouldRunAfterEdges.push(new GraphEdge(path.peek(), taskNode));
+    private void recordEdgeIfArrivedViaShouldRunAfter(Deque<GraphEdge> walkedShouldRunAfterEdges, Deque<WorkInfo> path, WorkInfo workInfo) {
+        if (!(workInfo instanceof TaskInfo)) {
+            return;
+        }
+        WorkInfo previous = path.peek();
+        if (previous instanceof TaskInfo && ((TaskInfo) previous).getShouldSuccessors().contains(workInfo)) {
+            walkedShouldRunAfterEdges.push(new GraphEdge(previous, workInfo));
         }
     }
 
@@ -434,17 +415,20 @@ public class DefaultTaskExecutionPlan implements TaskExecutionPlan {
      * Given a finalizer task, determine where in the current node queue that it should be inserted.
      * The finalizer should be inserted after any of it's preceding tasks.
      */
-    private int finalizerTaskPosition(TaskInfo finalizer, final List<TaskInfoInVisitingSegment> nodeQueue) {
+    private int finalizerTaskPosition(WorkInfo finalizer, final List<WorkInfoInVisitingSegment> nodeQueue) {
         if (nodeQueue.size() == 0) {
             return 0;
         }
 
-        Set<TaskInfo> precedingTasks = getAllPrecedingTasks(finalizer);
-        Set<Integer> precedingTaskIndices = CollectionUtils.collect(precedingTasks, new Transformer<Integer, TaskInfo>() {
-            public Integer transform(final TaskInfo dependsOnTask) {
-                return Iterables.indexOf(nodeQueue, new Predicate<TaskInfoInVisitingSegment>() {
-                    public boolean apply(TaskInfoInVisitingSegment taskInfoInVisitingSegment) {
-                        return taskInfoInVisitingSegment.taskInfo.equals(dependsOnTask);
+        Set<WorkInfo> precedingTasks = getAllPrecedingTasks(finalizer);
+        Set<Integer> precedingTaskIndices = CollectionUtils.collect(precedingTasks, new Transformer<Integer, WorkInfo>() {
+            @Override
+            public Integer transform(final WorkInfo dependsOnTask) {
+                return Iterables.indexOf(nodeQueue, new Predicate<WorkInfoInVisitingSegment>() {
+                    @Override
+                    @SuppressWarnings("NullableProblems")
+                    public boolean apply(WorkInfoInVisitingSegment taskInfoInVisitingSegment) {
+                        return taskInfoInVisitingSegment.workInfo.equals(dependsOnTask);
                     }
                 });
             }
@@ -452,46 +436,59 @@ public class DefaultTaskExecutionPlan implements TaskExecutionPlan {
         return Collections.max(precedingTaskIndices) + 1;
     }
 
-    private Set<TaskInfo> getAllPrecedingTasks(TaskInfo finalizer) {
-        Set<TaskInfo> precedingTasks = new HashSet<TaskInfo>();
-        Deque<TaskInfo> candidateTasks = new ArrayDeque<TaskInfo>();
+    private Set<WorkInfo> getAllPrecedingTasks(WorkInfo finalizer) {
+        Set<WorkInfo> precedingTasks = Sets.newHashSet();
+        Deque<WorkInfo> candidateTasks = new ArrayDeque<WorkInfo>();
 
         // Consider every task that must run before the finalizer
-        candidateTasks.addAll(finalizer.getDependencySuccessors());
-        candidateTasks.addAll(finalizer.getMustSuccessors());
-        candidateTasks.addAll(finalizer.getShouldSuccessors());
+        Iterables.addAll(candidateTasks, finalizer.getAllSuccessors());
 
         // For each candidate task, add it to the preceding tasks.
         while (!candidateTasks.isEmpty()) {
-            TaskInfo precedingTask = candidateTasks.pop();
-            if (precedingTasks.add(precedingTask)) {
+            WorkInfo precedingTask = candidateTasks.pop();
+            if (precedingTasks.add(precedingTask) && precedingTask instanceof TaskInfo) {
                 // Any task that the preceding task must run after is also a preceding task.
-                candidateTasks.addAll(precedingTask.getMustSuccessors());
+                candidateTasks.addAll(((TaskInfo) precedingTask).getMustSuccessors());
+                candidateTasks.addAll(((TaskInfo) precedingTask).getFinalizingSuccessors());
             }
         }
 
         return precedingTasks;
     }
 
-    private void onOrderingCycle() {
-        CachingDirectedGraphWalker<TaskInfo, Void> graphWalker = new CachingDirectedGraphWalker<TaskInfo, Void>(new DirectedGraph<TaskInfo, Void>() {
-            public void getNodeValues(TaskInfo node, Collection<? super Void> values, Collection<? super TaskInfo> connectedNodes) {
+    private void onOrderingCycle(WorkInfo successor, WorkInfo workInfo) {
+        CachingDirectedGraphWalker<WorkInfo, Void> graphWalker = new CachingDirectedGraphWalker<WorkInfo, Void>(new DirectedGraph<WorkInfo, Void>() {
+            @Override
+            public void getNodeValues(WorkInfo node, Collection<? super Void> values, Collection<? super WorkInfo> connectedNodes) {
                 connectedNodes.addAll(node.getDependencySuccessors());
-                connectedNodes.addAll(node.getMustSuccessors());
+                if (node instanceof TaskInfo) {
+                    TaskInfo taskInfo = (TaskInfo) node;
+                    connectedNodes.addAll(taskInfo.getMustSuccessors());
+                    connectedNodes.addAll(taskInfo.getFinalizingSuccessors());
+                }
             }
         });
         graphWalker.add(entryTasks);
-        final List<TaskInfo> firstCycle = new ArrayList<TaskInfo>(graphWalker.findCycles().get(0));
+
+        List<Set<WorkInfo>> cycles = graphWalker.findCycles();
+        if (cycles.isEmpty()) {
+            // TODO: This isn't correct. This means that we've detected a cycle while determining the execution plan, but the graph walker did not find one.
+            // https://github.com/gradle/gradle/issues/2293
+            throw new GradleException("Misdetected cycle between " + workInfo + " and " + successor + ". Help us by reporting this to https://github.com/gradle/gradle/issues/2293");
+        }
+        final List<WorkInfo> firstCycle = new ArrayList<WorkInfo>(cycles.get(0));
         Collections.sort(firstCycle);
 
-        DirectedGraphRenderer<TaskInfo> graphRenderer = new DirectedGraphRenderer<TaskInfo>(new GraphNodeRenderer<TaskInfo>() {
-            public void renderTo(TaskInfo node, StyledTextOutput output) {
-                output.withStyle(StyledTextOutput.Style.Identifier).text(node.getTask().getIdentityPath());
+        DirectedGraphRenderer<WorkInfo> graphRenderer = new DirectedGraphRenderer<WorkInfo>(new GraphNodeRenderer<WorkInfo>() {
+            @Override
+            public void renderTo(WorkInfo node, StyledTextOutput output) {
+                output.withStyle(StyledTextOutput.Style.Identifier).text(node);
             }
-        }, new DirectedGraph<TaskInfo, Object>() {
-            public void getNodeValues(TaskInfo node, Collection<? super Object> values, Collection<? super TaskInfo> connectedNodes) {
-                for (TaskInfo dependency : firstCycle) {
-                    if (node.getDependencySuccessors().contains(dependency) || node.getMustSuccessors().contains(dependency)) {
+        }, new DirectedGraph<WorkInfo, Object>() {
+            @Override
+            public void getNodeValues(WorkInfo node, Collection<? super Object> values, Collection<? super WorkInfo> connectedNodes) {
+                for (WorkInfo dependency : firstCycle) {
+                    if (node.hasHardSuccessor(dependency)) {
                         connectedNodes.add(dependency);
                     }
                 }
@@ -503,141 +500,143 @@ public class DefaultTaskExecutionPlan implements TaskExecutionPlan {
     }
 
     public void clear() {
-        coordinationService.withStateLock(new Transformer<ResourceLockState.Disposition, ResourceLockState>() {
-            @Override
-            public ResourceLockState.Disposition transform(ResourceLockState resourceLockState) {
-                nodeFactory.clear();
-                entryTasks.clear();
-                executionPlan.clear();
-                executionQueue.clear();
-                projectLocks.clear();
-                failures.clear();
-                taskMutations.clear();
-                canonicalizedFileCache.clear();
-                reachableCache.clear();
-                dependenciesCompleteCache.clear();
-                runningTasks.clear();
-                return FINISHED;
-            }
-        });
+        nodeFactory.clear();
+        dependencyResolver.clear();
+        entryTasks.clear();
+        workInfoMapping.clear();
+        executionQueue.clear();
+        projectLocks.clear();
+        failureCollector.clearFailures();
+        workMutations.clear();
+        canonicalizedFileCache.clear();
+        reachableCache.clear();
+        dependenciesCompleteCache.clear();
+        runningNodes.clear();
     }
 
-    public List<Task> getTasks() {
-        return new ArrayList<Task>(executionPlan.keySet());
+    @Override
+    public Set<Task> getTasks() {
+        return workInfoMapping.getTasks();
     }
 
     @Override
     public Set<Task> getFilteredTasks() {
-        return filteredTasks;
+        ImmutableSet.Builder<Task> builder = ImmutableSet.builder();
+        for (WorkInfo filteredNode : filteredNodes) {
+            if (filteredNode instanceof LocalTaskInfo) {
+                builder.add(((LocalTaskInfo) filteredNode).getTask());
+            }
+        }
+        return builder.build();
     }
 
     public void useFilter(Spec<? super Task> filter) {
         this.filter = filter;
     }
 
-    public void useFailureHandler(TaskFailureHandler handler) {
-        this.failureHandler = handler;
+    public void setContinueOnFailure(boolean continueOnFailre) {
+        this.continueOnFailure = continueOnFailre;
     }
 
     @Override
-    public boolean executeWithTask(final WorkerLease workerLease, final Action<TaskInfo> taskExecution) {
-        final AtomicReference<TaskInfo> selected = new AtomicReference<TaskInfo>();
-        final AtomicBoolean workRemaining = new AtomicBoolean();
-        coordinationService.withStateLock(new Transformer<ResourceLockState.Disposition, ResourceLockState>() {
-            @Override
-            public ResourceLockState.Disposition transform(ResourceLockState resourceLockState) {
-                if (cancellationToken.isCancellationRequested()) {
-                    if (abortExecution()) {
-                        tasksCancelled = true;
-                    }
-                }
+    @Nullable
+    public WorkInfo selectNext(WorkerLeaseRegistry.WorkerLease workerLease, ResourceLockState resourceLockState) {
+        if (allProjectsLocked()) {
+            return null;
+        }
 
-                workRemaining.set(workRemaining());
-                if (!workRemaining.get()) {
-                    return FINISHED;
-                }
-
-                if (allProjectsLocked()) {
-                    return RETRY;
-                }
-
-                try {
-                    selected.set(selectNextTask(workerLease));
-                } catch (Throwable t) {
-                    abortAllAndFail(t);
-                    workRemaining.set(false);
-                }
-
-                if (selected.get() == null && workRemaining.get()) {
-                    return RETRY;
-                } else {
-                    return FINISHED;
-                }
-            }
-        });
-
-
-        TaskInfo selectedTask = selected.get();
-        execute(selectedTask, workerLease, taskExecution);
-        return workRemaining.get();
-    }
-
-    private TaskInfo selectNextTask(final WorkerLease workerLease) {
-        final AtomicReference<TaskInfo> selected = new AtomicReference<TaskInfo>();
-        final Iterator<TaskInfo> iterator = executionQueue.iterator();
+        Iterator<WorkInfo> iterator = executionQueue.iterator();
         while (iterator.hasNext()) {
-            final TaskInfo taskInfo = iterator.next();
-            if (taskInfo.isReady() && allDependenciesComplete(taskInfo)) {
-                coordinationService.withStateLock(new Transformer<ResourceLockState.Disposition, ResourceLockState>() {
-                    @Override
-                    public ResourceLockState.Disposition transform(ResourceLockState resourceLockState) {
-                        ResourceLock projectLock = getProjectLock(taskInfo);
-                        // TODO: convert output file checks to a resource lock
-                        if (!projectLock.tryLock() || !workerLease.tryLock() || !canRunWithCurrentlyExecutedTasks(taskInfo)) {
-                            return FAILED;
-                        }
+            WorkInfo workInfo = iterator.next();
+            if (workInfo.isReady() && allDependenciesComplete(workInfo)) {
+                MutationInfo mutations = getResolvedMutationInfo(workInfo);
 
-                        selected.set(taskInfo);
-                        if (taskInfo.allDependenciesSuccessful()) {
-                            recordTaskStarted(taskInfo);
-                            taskInfo.startExecution();
-                        } else {
-                            taskInfo.skipExecution();
-                        }
-                        iterator.remove();
-                        return FINISHED;
-                    }
-                });
+                // TODO: convert output file checks to a resource lock
+                if (!tryLockProjectFor(workInfo)
+                    || !workerLease.tryLock()
+                    || !canRunWithCurrentlyExecutedTasks(workInfo, mutations)) {
+                    resourceLockState.releaseLocks();
+                    continue;
+                }
 
-                if (selected.get() != null) {
-                    break;
+                if (workInfo.allDependenciesSuccessful()) {
+                    recordWorkStarted(workInfo);
+                    workInfo.startExecution();
+                } else {
+                    workInfo.skipExecution();
+                }
+                iterator.remove();
+
+                return workInfo;
+            }
+        }
+        return null;
+    }
+
+    private boolean tryLockProjectFor(WorkInfo workInfo) {
+        if (workInfo instanceof LocalTaskInfo) {
+            return getProjectLock((LocalTaskInfo) workInfo).tryLock();
+        } else {
+            return true;
+        }
+    }
+
+    private void unlockProjectFor(WorkInfo workInfo) {
+        if (workInfo instanceof LocalTaskInfo) {
+            getProjectLock((LocalTaskInfo) workInfo).unlock();
+        }
+    }
+
+    private ResourceLock getProjectLock(LocalTaskInfo taskInfo) {
+        return projectLocks.get(taskInfo.getTask().getProject());
+    }
+
+    private MutationInfo getResolvedMutationInfo(WorkInfo workInfo) {
+        MutationInfo mutations = workMutations.get(workInfo);
+        if (!mutations.resolved) {
+            resolveMutations(mutations, workInfo);
+        }
+        return mutations;
+    }
+
+    private void resolveMutations(MutationInfo mutations, WorkInfo workInfo) {
+        if (workInfo instanceof LocalTaskInfo) {
+            LocalTaskInfo taskInfo = (LocalTaskInfo) workInfo;
+            TaskInternal task = taskInfo.getTask();
+            ProjectInternal project = (ProjectInternal) task.getProject();
+            ServiceRegistry serviceRegistry = project.getServices();
+            PathToFileResolver resolver = serviceRegistry.get(PathToFileResolver.class);
+            PropertyWalker propertyWalker = serviceRegistry.get(PropertyWalker.class);
+            TaskProperties taskProperties = DefaultTaskProperties.resolve(propertyWalker, resolver, task);
+            mutations.outputPaths.addAll(getOutputPaths(canonicalizedFileCache, taskInfo, taskProperties.getOutputFiles(), taskProperties.getLocalStateFiles()));
+            mutations.destroyablePaths.addAll(getDestroyablePaths(canonicalizedFileCache, taskInfo, taskProperties.getDestroyableFiles()));
+            mutations.hasFileInputs = !taskProperties.getInputFileProperties().isEmpty();
+            mutations.hasOutputs = taskProperties.hasDeclaredOutputs();
+            mutations.hasLocalState = !taskProperties.getLocalStateFiles().isEmpty();
+            mutations.resolved = true;
+
+            if (!mutations.destroyablePaths.isEmpty()) {
+                if (mutations.hasOutputs) {
+                    throw new IllegalStateException("Task " + taskInfo + " has both outputs and destroyables defined.  A task can define either outputs or destroyables, but not both.");
+                }
+                if (mutations.hasFileInputs) {
+                    throw new IllegalStateException("Task " + taskInfo + " has both inputs and destroyables defined.  A task can define either inputs or destroyables, but not both.");
+                }
+                if (mutations.hasLocalState) {
+                    throw new IllegalStateException("Task " + taskInfo + " has both local state and destroyables defined.  A task can define either local state or destroyables, but not both.");
                 }
             }
         }
-        return selected.get();
     }
 
-    private void execute(TaskInfo selectedTask, WorkerLease workerLease, Action<TaskInfo> taskExecution) {
-        if (selectedTask == null) {
-            return;
-        }
-        try {
-            if (!selectedTask.isComplete()) {
-                taskExecution.execute(selectedTask);
-            }
-        } finally {
-            coordinationService.withStateLock(unlock(workerLease, getProjectLock(selectedTask)));
-        }
-    }
-
-    private boolean allDependenciesComplete(TaskInfo taskInfo) {
-        if (dependenciesCompleteCache.contains(taskInfo)) {
+    private boolean allDependenciesComplete(WorkInfo workInfo) {
+        if (dependenciesCompleteCache.contains(workInfo)) {
             return true;
         }
 
-        boolean dependenciesComplete = taskInfo.allDependenciesComplete();
+        boolean dependenciesComplete = workInfo.allDependenciesComplete();
         if (dependenciesComplete) {
-            dependenciesCompleteCache.add(taskInfo);
+            dependenciesCompleteCache.add(workInfo);
         }
 
         return dependenciesComplete;
@@ -652,153 +651,147 @@ public class DefaultTaskExecutionPlan implements TaskExecutionPlan {
         return true;
     }
 
-    private ResourceLock getProjectLock(TaskInfo taskInfo) {
-        return projectLocks.get(taskInfo.getTask().getProject());
-    }
-
     private ResourceLock getOrCreateProjectLock(Project project) {
         String gradlePath = ((GradleInternal) project.getGradle()).getIdentityPath().toString();
         String projectPath = ((ProjectInternal) project).getIdentityPath().toString();
         return workerLeaseService.getProjectLock(gradlePath, projectPath);
     }
 
-    private boolean canRunWithCurrentlyExecutedTasks(TaskInfo taskInfo) {
-        Set<String> candidateTaskDestroyables = getDestroyablePaths(taskInfo);
+    private boolean canRunWithCurrentlyExecutedTasks(WorkInfo taskInfo, MutationInfo mutations) {
+        Set<String> candidateTaskDestroyables = mutations.destroyablePaths;
 
-        if (!candidateTaskDestroyables.isEmpty() && !taskInfo.getTask().getOutputs().getFileProperties().isEmpty()) {
-            throw new IllegalStateException("Task " + taskInfo.getTask().getIdentityPath() + " has both outputs and destroyables defined.  A task can define either outputs or destroyables, but not both.");
-        }
-
-        if (!candidateTaskDestroyables.isEmpty() && !taskInfo.getTask().getInputs().getFileProperties().isEmpty()) {
-            throw new IllegalStateException("Task " + taskInfo.getTask().getIdentityPath() + " has both inputs and destroyables defined.  A task can define either inputs or destroyables, but not both.");
-        }
-
-        if (!runningTasks.isEmpty()) {
-            Set<String> candidateTaskOutputs = getOutputPaths(taskInfo);
-            Set<String> candidateTaskMutations = !candidateTaskOutputs.isEmpty() ? candidateTaskOutputs : candidateTaskDestroyables;
-            Pair<TaskInfo, String> overlap = firstRunningTaskWithOverlappingMutations(candidateTaskMutations);
-            if (overlap != null) {
+        if (!runningNodes.isEmpty()) {
+            Set<String> candidateTaskOutputs = mutations.outputPaths;
+            Set<String> candidateMutations = !candidateTaskOutputs.isEmpty() ? candidateTaskOutputs : candidateTaskDestroyables;
+            if (hasTaskWithOverlappingMutations(candidateMutations)) {
                 return false;
             }
         }
 
-        Pair<TaskInfo, String> overlap = firstTaskWithDestroyedIntermediateInput(taskInfo, candidateTaskDestroyables);
-        if (overlap != null) {
-            return false;
-        }
-
-        return true;
+        return !doesDestroyNotYetConsumedOutputOfAnotherTask(taskInfo, candidateTaskDestroyables);
     }
 
-    private Set<String> canonicalizedPaths(final Map<File, String> cache, Iterable<File> files) {
-        Function<File, String> canonicalize = new Function<File, String>() {
-            @Override
-            public String apply(File file) {
-                String path;
-                try {
-                    path = cache.get(file);
-                    if (path == null) {
-                        path = file.getCanonicalPath();
-                        cache.put(file, path);
-                    }
-                } catch (IOException e) {
-                    throw new UncheckedIOException(e);
+    private static ImmutableSet<String> canonicalizedPaths(final Map<File, String> cache, Iterable<File> files) {
+        ImmutableSet.Builder<String> builder = ImmutableSet.builder();
+        for (File file : files) {
+            String path;
+            try {
+                path = cache.get(file);
+                if (path == null) {
+                    path = file.getCanonicalPath();
+                    cache.put(file, path);
                 }
-                return path;
+                builder.add(path);
+            } catch (IOException e) {
+                throw new UncheckedIOException(e);
             }
-        };
-        return Sets.newHashSet(Iterables.transform(files, canonicalize));
+        }
+        return builder.build();
     }
 
-    @Nullable
-    private Pair<TaskInfo, String> firstRunningTaskWithOverlappingMutations(Set<String> candidateTaskMutations) {
-        if (!candidateTaskMutations.isEmpty()) {
-            for (TaskInfo runningTask : runningTasks) {
-                TaskMutationInfo taskMutationInfo = taskMutations.get(runningTask);
-                Iterable<String> runningTaskMutations = Iterables.concat(taskMutationInfo.outputPaths, taskMutationInfo.destroyablePaths);
-                String firstOverlap = findFirstOverlap(candidateTaskMutations, runningTaskMutations);
-                if (firstOverlap != null) {
-                    return Pair.of(runningTask, firstOverlap);
+    private boolean hasTaskWithOverlappingMutations(Set<String> candidateMutationPaths) {
+        if (!candidateMutationPaths.isEmpty()) {
+            for (WorkInfo runningWork : runningNodes) {
+                MutationInfo runningMutations = workMutations.get(runningWork);
+                Iterable<String> runningMutationPaths = Iterables.concat(runningMutations.outputPaths, runningMutations.destroyablePaths);
+                if (hasOverlap(candidateMutationPaths, runningMutationPaths)) {
+                    return true;
                 }
             }
         }
-
-        return null;
+        return false;
     }
 
-    @Nullable
-    private Pair<TaskInfo, String> firstTaskWithDestroyedIntermediateInput(final TaskInfo taskInfo, Set<String> destroyablePaths) {
+    private boolean doesDestroyNotYetConsumedOutputOfAnotherTask(WorkInfo destroyerTask, Set<String> destroyablePaths) {
         if (!destroyablePaths.isEmpty()) {
-            Iterator<TaskMutationInfo> iterator = taskMutations.values().iterator();
-            while (iterator.hasNext()) {
-                TaskMutationInfo taskMutationInfo = iterator.next();
-                if (taskMutationInfo.task.isComplete() && !taskMutationInfo.consumingTasks.isEmpty()) {
-                    String firstOverlap = findFirstOverlap(destroyablePaths, taskMutationInfo.outputPaths);
-                    if (firstOverlap != null) {
-                        for (TaskInfo consumingTask : taskMutationInfo.consumingTasks) {
-                            if (consumingTask != taskInfo && !isReachableFrom(consumingTask, taskInfo)) {
-                                return Pair.of(consumingTask, firstOverlap);
-                            }
-                        }
+            for (MutationInfo producingWork : workMutations.values()) {
+                if (!producingWork.workInfo.isComplete()) {
+                    // We don't care about producing tasks that haven't finished yet
+                    continue;
+                }
+                if (producingWork.consumingWork.isEmpty()) {
+                    // We don't care about tasks whose output is not consumed by anyone anymore
+                    continue;
+                }
+                if (!hasOverlap(destroyablePaths, producingWork.outputPaths)) {
+                    // No overlap no cry
+                    continue;
+                }
+                for (WorkInfo consumer : producingWork.consumingWork) {
+                    if (doesConsumerDependOnDestroyer(consumer, destroyerTask)) {
+                        // If there's an explicit dependency from consuming task to destroyer,
+                        // then we accept that as the will of the user
+                        continue;
                     }
+                    return true;
                 }
             }
         }
-        return null;
+        return false;
     }
 
-    private boolean isReachableFrom(TaskInfo fromTask, TaskInfo toTask) {
-        Pair<TaskInfo, TaskInfo> taskPair = Pair.of(fromTask, toTask);
-        if (reachableCache.get(taskPair) != null) {
-            return reachableCache.get(taskPair);
+    private boolean doesConsumerDependOnDestroyer(WorkInfo consumer, WorkInfo destroyer) {
+        if (consumer == destroyer) {
+            return true;
+        }
+        Pair<WorkInfo, WorkInfo> workPair = Pair.of(consumer, destroyer);
+        if (reachableCache.get(workPair) != null) {
+            return reachableCache.get(workPair);
         }
 
         boolean reachable = false;
-        for (TaskInfo dependency : Iterables.concat(fromTask.getMustSuccessors(), fromTask.getDependencySuccessors())) {
+        for (WorkInfo dependency : consumer.getAllSuccessors()) {
             if (!dependency.isComplete()) {
-                if (dependency == toTask) {
-                    reachable = true;
-                }
-                if (isReachableFrom(dependency, toTask)) {
+                if (doesConsumerDependOnDestroyer(dependency, destroyer)) {
                     reachable = true;
                 }
             }
         }
 
-        reachableCache.put(taskPair, reachable);
+        reachableCache.put(workPair, reachable);
         return reachable;
     }
 
-    private String findFirstOverlap(Iterable<String> paths1, Iterable<String> paths2) {
+    private static boolean hasOverlap(Iterable<String> paths1, Iterable<String> paths2) {
         for (String path1 : paths1) {
             for (String path2 : paths2) {
-                if (pathsOverlap(path1, path2)) {
-                    return TextUtil.shorterOf(path1, path2);
+                String overLappedPath = getOverLappedPath(path1, path2);
+                if (overLappedPath != null) {
+                    return true;
                 }
             }
         }
 
-        return null;
+        return false;
     }
 
-    private Set<String> getOutputPaths(TaskInfo task) {
+    private static Set<String> getOutputPaths(Map<File, String> canonicalizedFileCache, TaskInfo task, FileCollection outputFiles, FileCollection localStateFiles) {
         try {
-            return canonicalizedPaths(canonicalizedFileCache, Iterables.concat(
-                task.getTask().getOutputs().getFiles(),
-                ((TaskLocalStateInternal) task.getTask().getLocalState()).getFiles()
-            ));
+            return canonicalizedPaths(canonicalizedFileCache, Iterables.concat(outputFiles, localStateFiles));
         } catch (ResourceDeadlockException e) {
-            throw new IllegalStateException("A deadlock was detected while resolving the task outputs for " + task.getTask().getIdentityPath() + ".  This can be caused, for instance, by a task output causing dependency resolution.", e);
+            throw new IllegalStateException(deadlockMessage(task, "an output or local state", "outputs"), e);
         }
     }
 
-    private Set<String> getDestroyablePaths(TaskInfo task) {
-        return canonicalizedPaths(canonicalizedFileCache, ((TaskDestroyablesInternal) task.getTask().getDestroyables()).getFiles());
+    private static Set<String> getDestroyablePaths(Map<File, String> canonicalizedFileCache, TaskInfo task, FileCollection destroyableFiles) {
+        try {
+            return canonicalizedPaths(canonicalizedFileCache, destroyableFiles);
+        } catch (ResourceDeadlockException e) {
+            throw new IllegalStateException(deadlockMessage(task, "a destroyable", "destroyables"), e);
+        }
     }
 
-    private boolean pathsOverlap(String firstPath, String secondPath) {
+    private static String deadlockMessage(TaskInfo task, String singular, String plural) {
+        return String.format("A deadlock was detected while resolving the %s for task '%s'. This can be caused, for instance, by %s property causing dependency resolution.", plural, task, singular);
+    }
+
+    @Nullable
+    private static String getOverLappedPath(String firstPath, String secondPath) {
         if (firstPath.equals(secondPath)) {
-            return true;
+            return firstPath;
+        }
+        if (firstPath.length() == secondPath.length()) {
+            return null;
         }
 
         String shorter;
@@ -810,67 +803,74 @@ public class DefaultTaskExecutionPlan implements TaskExecutionPlan {
             shorter = firstPath;
             longer = secondPath;
         }
-        return longer.startsWith(shorter + StandardSystemProperty.FILE_SEPARATOR.value());
+
+        boolean isOverlapping = longer.startsWith(shorter) && longer.charAt(shorter.length()) == File.separatorChar;
+        if (isOverlapping) {
+            return shorter;
+        } else {
+            return null;
+        }
     }
 
-    private void recordTaskStarted(TaskInfo taskInfo) {
-        runningTasks.add(taskInfo);
-        TaskMutationInfo taskMutationInfo = taskMutations.get(taskInfo);
-        taskMutationInfo.outputPaths.addAll(getOutputPaths(taskInfo));
-        taskMutationInfo.destroyablePaths.addAll(getDestroyablePaths(taskInfo));
+    private void recordWorkStarted(WorkInfo workInfo) {
+        runningNodes.add(workInfo);
     }
 
-    private void recordTaskCompleted(TaskInfo taskInfo) {
-        runningTasks.remove(taskInfo);
-        TaskMutationInfo taskMutationInfo = taskMutations.get(taskInfo);
-        for (TaskInfo producerTask : taskMutationInfo.consumesOutputOf) {
-            TaskMutationInfo producerTaskMutationInfo = taskMutations.get(producerTask);
-            if (producerTaskMutationInfo.consumingTasks.remove(taskInfo) && canRemoveTaskMutation(producerTaskMutationInfo)) {
-                taskMutations.remove(producerTask);
+    private void recordWorkCompleted(WorkInfo workInfo) {
+        runningNodes.remove(workInfo);
+        MutationInfo mutations = workMutations.get(workInfo);
+        for (WorkInfo producer : mutations.consumesOutputOf) {
+            MutationInfo producerMutations = workMutations.get(producer);
+            if (producerMutations.consumingWork.remove(workInfo) && canRemoveMutation(producerMutations)) {
+                workMutations.remove(producer);
             }
         }
 
-        if (canRemoveTaskMutation(taskMutationInfo)) {
-            taskMutations.remove(taskInfo);
+        if (canRemoveMutation(mutations)) {
+            workMutations.remove(workInfo);
         }
     }
 
-    private boolean canRemoveTaskMutation(TaskMutationInfo taskMutationInfo) {
-        return taskMutationInfo != null && taskMutationInfo.task.isComplete() && taskMutationInfo.consumingTasks.isEmpty();
+    private static boolean canRemoveMutation(@Nullable MutationInfo mutations) {
+        return mutations != null && mutations.workInfo.isComplete() && mutations.consumingWork.isEmpty();
     }
 
-    public void taskComplete(final TaskInfo taskInfo) {
-        coordinationService.withStateLock(new Transformer<ResourceLockState.Disposition, ResourceLockState>() {
-            @Override
-            public ResourceLockState.Disposition transform(ResourceLockState resourceLockState) {
-                enforceFinalizerTasks(taskInfo);
-                if (taskInfo.isFailed()) {
-                    handleFailure(taskInfo);
+    @Override
+    public void workComplete(WorkInfo workInfo) {
+        try {
+            if (!workInfo.isComplete()) {
+                enforceFinalizerTasks(workInfo);
+                if (workInfo.isFailed()) {
+                    handleFailure(workInfo);
                 }
 
-                taskInfo.finishExecution();
-                recordTaskCompleted(taskInfo);
-                return FINISHED;
+                workInfo.finishExecution();
+                recordWorkCompleted(workInfo);
             }
-        });
+        } finally {
+            unlockProjectFor(workInfo);
+        }
     }
 
-    private void enforceFinalizerTasks(TaskInfo taskInfo) {
-        for (TaskInfo finalizerNode : taskInfo.getFinalizers()) {
+    private static void enforceFinalizerTasks(WorkInfo workInfo) {
+        if (!(workInfo instanceof TaskInfo)) {
+            return;
+        }
+        for (WorkInfo finalizerNode : ((TaskInfo) workInfo).getFinalizers()) {
             if (finalizerNode.isRequired() || finalizerNode.isMustNotRun()) {
-                enforceWithDependencies(finalizerNode, Sets.<TaskInfo>newHashSet());
+                enforceWithDependencies(finalizerNode, Sets.<WorkInfo>newHashSet());
             }
         }
     }
 
-    private void enforceWithDependencies(TaskInfo nodeInfo, Set<TaskInfo> enforcedTasks) {
-        Deque<TaskInfo> candidateNodes = new ArrayDeque<TaskInfo>();
+    private static void enforceWithDependencies(WorkInfo nodeInfo, Set<WorkInfo> enforcedNodes) {
+        Deque<WorkInfo> candidateNodes = new ArrayDeque<WorkInfo>();
         candidateNodes.add(nodeInfo);
 
         while (!candidateNodes.isEmpty()) {
-            TaskInfo node = candidateNodes.pop();
-            if (!enforcedTasks.contains(node)) {
-                enforcedTasks.add(node);
+            WorkInfo node = candidateNodes.pop();
+            if (!enforcedNodes.contains(node)) {
+                enforcedNodes.add(node);
 
                 candidateNodes.addAll(node.getDependencySuccessors());
 
@@ -881,28 +881,31 @@ public class DefaultTaskExecutionPlan implements TaskExecutionPlan {
         }
     }
 
-    private void abortAllAndFail(Throwable t) {
+    @Override
+    public void abortAllAndFail(Throwable t) {
         abortExecution(true);
-        this.failures.add(t);
+        this.failureCollector.addFailure(t);
     }
 
-    private void handleFailure(TaskInfo taskInfo) {
-        Throwable executionFailure = taskInfo.getExecutionFailure();
+    private void handleFailure(WorkInfo workInfo) {
+        Throwable executionFailure = workInfo.getExecutionFailure();
         if (executionFailure != null) {
-            // Always abort execution for an execution failure (as opposed to a task failure)
+            // Always abort execution for an execution failure (as opposed to a work failure)
             abortExecution();
-            this.failures.add(executionFailure);
+            this.failureCollector.addFailure(executionFailure);
             return;
         }
 
-        // Task failure
+        // Work failure
         try {
-            failureHandler.onTaskFailure(taskInfo.getTask());
-            this.failures.add(taskInfo.getTaskFailure());
+            if (!continueOnFailure) {
+                workInfo.rethrowFailure();
+            }
+            this.failureCollector.addFailure(workInfo.getWorkFailure());
         } catch (Exception e) {
             // If the failure handler rethrows exception, then execution of other tasks is aborted. (--continue will collect failures)
             abortExecution();
-            this.failures.add(e);
+            this.failureCollector.addFailure(e);
         }
     }
 
@@ -910,106 +913,159 @@ public class DefaultTaskExecutionPlan implements TaskExecutionPlan {
         return abortExecution(false);
     }
 
+    @Override
+    public void cancelExecution() {
+        tasksCancelled = abortExecution() || tasksCancelled;
+    }
+
     private boolean abortExecution(boolean abortAll) {
         boolean aborted = false;
-        for (TaskInfo taskInfo : executionPlan.values()) {
+        for (WorkInfo workInfo : workInfoMapping) {
             // Allow currently executing and enforced tasks to complete, but skip everything else.
-            if (taskInfo.isRequired()) {
-                taskInfo.skipExecution();
+            if (workInfo.isRequired()) {
+                workInfo.skipExecution();
                 aborted = true;
             }
 
             // If abortAll is set, also stop enforced tasks.
-            if (abortAll && taskInfo.isReady()) {
-                taskInfo.abortExecution();
+            if (abortAll && workInfo.isReady()) {
+                workInfo.abortExecution();
                 aborted = true;
             }
         }
         return aborted;
     }
 
-    public void awaitCompletion() {
-        coordinationService.withStateLock(new Transformer<ResourceLockState.Disposition, ResourceLockState>() {
-            @Override
-            public ResourceLockState.Disposition transform(ResourceLockState resourceLockState) {
-                if (allTasksComplete()) {
-                    rethrowFailures();
-                    return FINISHED;
-                } else {
-                    return RETRY;
-                }
-            }
-        });
-    }
-
-    private void rethrowFailures() {
+    @Override
+    public void collectFailures(Collection<? super Throwable> failures) {
         if (tasksCancelled) {
             failures.add(new BuildCancelledException());
         }
-        if (failures.isEmpty()) {
-            return;
-        }
-
-        if (failures.size() > 1) {
-            throw new MultipleBuildFailures(failures);
-        }
-
-        throw UncheckedException.throwAsUncheckedException(failures.get(0));
+        failures.addAll(failureCollector.getFailures());
     }
 
-    private boolean allTasksComplete() {
-        for (TaskInfo taskInfo : executionPlan.values()) {
-            if (!taskInfo.isComplete()) {
+    @Override
+    public boolean allTasksComplete() {
+        for (WorkInfo workInfo : workInfoMapping) {
+            if (!workInfo.isComplete()) {
                 return false;
             }
         }
         return true;
     }
 
-    private boolean workRemaining() {
-        for (TaskInfo taskInfo : executionQueue) {
-            if (!taskInfo.isComplete()) {
+    @Override
+    public boolean hasWorkRemaining() {
+        for (WorkInfo workInfo : executionQueue) {
+            if (!workInfo.isComplete()) {
                 return true;
             }
         }
-        return false;
+        return !runningNodes.isEmpty();
+    }
+
+    @Override
+    public int size() {
+        return workInfoMapping.workInfos.size();
     }
 
     private static class GraphEdge {
-        private final TaskInfo from;
-        private final TaskInfo to;
+        private final WorkInfo from;
+        private final WorkInfo to;
 
-        private GraphEdge(TaskInfo from, TaskInfo to) {
+        private GraphEdge(WorkInfo from, WorkInfo to) {
             this.from = from;
             this.to = to;
         }
     }
 
-    private static class TaskInfoInVisitingSegment {
-        private final TaskInfo taskInfo;
+    private static class WorkInfoInVisitingSegment {
+        private final WorkInfo workInfo;
         private final int visitingSegment;
 
-        private TaskInfoInVisitingSegment(TaskInfo taskInfo, int visitingSegment) {
-            this.taskInfo = taskInfo;
+        private WorkInfoInVisitingSegment(WorkInfo workInfo, int visitingSegment) {
+            this.workInfo = workInfo;
             this.visitingSegment = visitingSegment;
         }
     }
 
-    private static class RethrowingFailureHandler implements TaskFailureHandler {
-        public void onTaskFailure(Task task) {
-            task.getState().rethrowFailure();
+    private static class MutationInfo {
+        final WorkInfo workInfo;
+        final Set<WorkInfo> consumingWork = Sets.newHashSet();
+        final Set<WorkInfo> consumesOutputOf = Sets.newHashSet();
+        final Set<String> outputPaths = Sets.newHashSet();
+        final Set<String> destroyablePaths = Sets.newHashSet();
+        boolean hasFileInputs;
+        boolean hasOutputs;
+        boolean hasLocalState;
+        boolean resolved;
+
+        MutationInfo(WorkInfo workInfo) {
+            this.workInfo = workInfo;
         }
     }
 
-    private static class TaskMutationInfo {
-        final TaskInfo task;
-        final Set<TaskInfo> consumingTasks = Sets.newHashSet();
-        final Set<TaskInfo> consumesOutputOf = Sets.newHashSet();
-        final Set<String> outputPaths = Sets.newHashSet();
-        final Set<String> destroyablePaths = Sets.newHashSet();
+    private static class WorkInfoMapping extends AbstractCollection<WorkInfo> {
+        private final Map<Task, LocalTaskInfo> taskMapping = Maps.newLinkedHashMap();
+        private final Set<WorkInfo> workInfos = Sets.newLinkedHashSet();
 
-        TaskMutationInfo(TaskInfo task) {
-            this.task = task;
+        @Override
+        public boolean contains(Object o) {
+            return workInfos.contains(o);
+        }
+
+        @Override
+        public boolean add(WorkInfo workInfo) {
+            if (!workInfos.add(workInfo)) {
+                return false;
+            }
+            if (workInfo instanceof LocalTaskInfo) {
+                LocalTaskInfo taskInfo = (LocalTaskInfo) workInfo;
+                taskMapping.put(taskInfo.getTask(), taskInfo);
+            }
+            return true;
+        }
+
+        public TaskInfo get(Task task) {
+            TaskInfo taskInfo = taskMapping.get(task);
+            if (taskInfo == null) {
+                throw new IllegalStateException("Task is not part of the execution plan, no dependency information is available.");
+            }
+            return taskInfo;
+        }
+
+        public Set<Task> getTasks() {
+            return taskMapping.keySet();
+        }
+
+        @Override
+        public Iterator<WorkInfo> iterator() {
+            return workInfos.iterator();
+        }
+
+        @Override
+        public void clear() {
+            workInfos.clear();
+            taskMapping.clear();
+        }
+
+        @Override
+        public int size() {
+            return workInfos.size();
+        }
+
+        public void retainFirst(int count) {
+            Iterator<WorkInfo> executionPlanIterator = workInfos.iterator();
+            for (int i = 0; i < count; i++) {
+                executionPlanIterator.next();
+            }
+            while (executionPlanIterator.hasNext()) {
+                WorkInfo removedWork = executionPlanIterator.next();
+                executionPlanIterator.remove();
+                if (removedWork instanceof LocalTaskInfo) {
+                    taskMapping.remove(((LocalTaskInfo) removedWork).getTask());
+                }
+            }
         }
     }
 }
