@@ -26,41 +26,42 @@ import org.gradle.api.Action;
 import org.gradle.api.JavaVersion;
 import org.gradle.api.Transformer;
 import org.gradle.api.UncheckedIOException;
-import org.gradle.api.internal.ClosureBackedAction;
 import org.gradle.api.internal.initialization.DefaultClassLoaderScope;
 import org.gradle.api.logging.Logger;
 import org.gradle.api.logging.Logging;
 import org.gradle.api.logging.configuration.ConsoleOutput;
+import org.gradle.api.logging.configuration.WarningMode;
+import org.gradle.cache.internal.DefaultGeneratedGradleJarCache;
+import org.gradle.initialization.BuildLayoutParameters;
+import org.gradle.integtests.fixtures.RepoScriptBlockUtil;
 import org.gradle.integtests.fixtures.daemon.DaemonLogsAnalyzer;
 import org.gradle.internal.ImmutableActionSet;
 import org.gradle.internal.MutableActionSet;
 import org.gradle.internal.UncheckedException;
 import org.gradle.internal.featurelifecycle.LoggingDeprecatedFeatureHandler;
 import org.gradle.internal.jvm.Jvm;
-import org.gradle.internal.jvm.UnsupportedJavaRuntimeException;
+import org.gradle.internal.jvm.inspection.JvmVersionDetector;
 import org.gradle.internal.logging.LoggingManagerInternal;
 import org.gradle.internal.logging.services.DefaultLoggingManagerFactory;
 import org.gradle.internal.logging.services.LoggingServiceRegistry;
 import org.gradle.internal.logging.sink.ConsoleStateUtil;
-import org.gradle.internal.logging.sink.OutputEventRenderer;
 import org.gradle.internal.nativeintegration.services.NativeServices;
 import org.gradle.internal.service.ServiceRegistry;
 import org.gradle.internal.service.ServiceRegistryBuilder;
 import org.gradle.internal.service.scopes.GlobalScopeServices;
-import org.gradle.internal.time.Clock;
+import org.gradle.launcher.cli.CommandLineActionFactory;
 import org.gradle.launcher.daemon.configuration.DaemonBuildOptions;
 import org.gradle.process.internal.streams.SafeStreams;
 import org.gradle.test.fixtures.file.TestDirectoryProvider;
 import org.gradle.test.fixtures.file.TestFile;
 import org.gradle.testfixtures.internal.NativeServicesTestFixture;
+import org.gradle.util.ClosureBackedAction;
 import org.gradle.util.CollectionUtils;
-import org.gradle.util.GUtil;
 import org.gradle.util.GradleVersion;
 
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.OutputStream;
 import java.io.PipedInputStream;
 import java.io.PipedOutputStream;
 import java.nio.charset.Charset;
@@ -72,24 +73,31 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
-import java.util.Properties;
 import java.util.Set;
 
-import static org.gradle.integtests.fixtures.executer.AbstractGradleExecuter.CliDaemonArgument.*;
+import static org.gradle.api.internal.artifacts.BaseRepositoryFactory.PLUGIN_PORTAL_OVERRIDE_URL_PROPERTY;
+import static org.gradle.integtests.fixtures.RepoScriptBlockUtil.gradlePluginRepositoryMirrorUrl;
+import static org.gradle.integtests.fixtures.executer.AbstractGradleExecuter.CliDaemonArgument.DAEMON;
+import static org.gradle.integtests.fixtures.executer.AbstractGradleExecuter.CliDaemonArgument.FOREGROUND;
+import static org.gradle.integtests.fixtures.executer.AbstractGradleExecuter.CliDaemonArgument.NOT_DEFINED;
+import static org.gradle.integtests.fixtures.executer.AbstractGradleExecuter.CliDaemonArgument.NO_DAEMON;
 import static org.gradle.integtests.fixtures.executer.OutputScrapingExecutionResult.STACK_TRACE_ELEMENT;
 import static org.gradle.internal.service.scopes.DefaultGradleUserHomeScopeServiceRegistry.REUSE_USER_HOME_SERVICES;
 import static org.gradle.util.CollectionUtils.collect;
 import static org.gradle.util.CollectionUtils.join;
 
 public abstract class AbstractGradleExecuter implements GradleExecuter {
+
     protected static final ServiceRegistry GLOBAL_SERVICES = ServiceRegistryBuilder.builder()
         .displayName("Global services")
         .parent(newCommandLineProcessLogging())
         .parent(NativeServicesTestFixture.getInstance())
         .provider(new GlobalScopeServices(true))
         .build();
+
+    private static final JvmVersionDetector JVM_VERSION_DETECTOR = GLOBAL_SERVICES.get(JvmVersionDetector.class);
+
     protected final static Set<String> PROPAGATED_SYSTEM_PROPERTIES = Sets.newHashSet();
-    private static final List<String> JDK7_PATHS = Arrays.asList("1.7", "jdk7", "-7-", "jdk-7", "7u");
 
     public static void propagateSystemProperty(String name) {
         PROPAGATED_SYSTEM_PROPERTIES.add(name);
@@ -98,20 +106,6 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
     private static final String DEBUG_SYSPROP = "org.gradle.integtest.debug";
     private static final String LAUNCHER_DEBUG_SYSPROP = "org.gradle.integtest.launcher.debug";
     private static final String PROFILE_SYSPROP = "org.gradle.integtest.profile";
-
-    private static final List<String> LOW_LEVELS = Arrays.asList(
-        "--info",
-        "--debug",
-        "--warn",
-        "-Dorg.gradle.logging.level=lifecycle",
-        "-Dorg.gradle.logging.level=info",
-        "-Dorg.gradle.logging.level=debug",
-        "-Dorg.gradle.logging.level=warn");
-
-    private static final List<String> HIGH_LEVELS = Arrays.asList(
-        "-q",
-        "--quiet",
-        "-Dorg.gradle.logging.level=quiet");
 
     protected static final List<String> DEBUG_ARGS = ImmutableList.of(
         "-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5005"
@@ -126,6 +120,7 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
     private final List<String> args = new ArrayList<String>();
     private final List<String> tasks = new ArrayList<String>();
     private boolean allowExtraLogging = true;
+    protected ConsoleAttachment consoleAttachment = ConsoleAttachment.NOT_ATTACHED;
     private File workingDir;
     private boolean quiet;
     private boolean taskList;
@@ -152,7 +147,9 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
     private boolean requiresGradleDistribution;
     private boolean useOwnUserHomeServices;
     private ConsoleOutput consoleType;
+    protected WarningMode warningMode = WarningMode.All;
     private boolean showStacktrace = true;
+    private boolean renderWelcomeMessage;
 
     private int expectedDeprecationWarnings;
     private boolean eagerClassLoaderCreationChecksOn = true;
@@ -225,6 +222,7 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
         useOnlyRequestedJvmOpts = false;
         expectedDeprecationWarnings = 0;
         stackTraceChecksOn = true;
+        renderWelcomeMessage = false;
         debug = Boolean.getBoolean(DEBUG_SYSPROP);
         debugLauncher = Boolean.getBoolean(LAUNCHER_DEBUG_SYSPROP);
         profiler = System.getProperty(PROFILE_SYSPROP, "");
@@ -232,6 +230,7 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
         checkDeprecations = true;
         durationMeasurement = null;
         consoleType = null;
+        warningMode = WarningMode.All;
         return this;
     }
 
@@ -382,9 +381,18 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
             executer.withConsole(consoleType);
         }
 
+        executer.withWarningMode(warningMode);
+
         if (!showStacktrace) {
             executer.withStacktraceDisabled();
         }
+
+        if (renderWelcomeMessage) {
+            executer.withWelcomeMessageEnabled();
+        }
+
+        executer.withTestConsoleAttached(consoleAttachment);
+
         return executer;
     }
 
@@ -437,10 +445,10 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
 
         GradleInvocation gradleInvocation = new GradleInvocation();
         gradleInvocation.environmentVars.putAll(environmentVars);
-        gradleInvocation.buildJvmArgs.addAll(buildJvmOpts);
         if (!useOnlyRequestedJvmOpts) {
             gradleInvocation.buildJvmArgs.addAll(getImplicitBuildJvmArgs());
         }
+        gradleInvocation.buildJvmArgs.addAll(buildJvmOpts);
         calculateLauncherJvmArgs(gradleInvocation);
         gradleInvocation.args.addAll(getAllArgs());
 
@@ -513,7 +521,27 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
         if (isProfile()) {
             buildJvmOpts.add(profiler);
         }
+
+        if (isSharedDaemons()) {
+            if (JVM_VERSION_DETECTOR.getJavaVersion(Jvm.forHome(getJavaHome())).compareTo(JavaVersion.VERSION_1_8) < 0) {
+                buildJvmOpts.add("-XX:MaxPermSize=320m");
+            }
+            buildJvmOpts.add("-Xmx2g");
+        } else {
+            buildJvmOpts.add("-Xmx512m");
+        }
+        buildJvmOpts.add("-XX:+HeapDumpOnOutOfMemoryError");
+        buildJvmOpts.add("-XX:HeapDumpPath=" + buildContext.getGradleUserHomeDir());
         return buildJvmOpts;
+    }
+
+    private boolean xmxSpecified() {
+        for (String arg : buildJvmOpts) {
+            if (arg.startsWith("-Xmx")) {
+                return true;
+            }
+        }
+        return false;
     }
 
     @Override
@@ -722,7 +750,7 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
     @Override
     public boolean isUseDaemon() {
         CliDaemonArgument cliDaemonArgument = resolveCliDaemonArgument();
-        if (cliDaemonArgument == NO_DAEMON) {
+        if (cliDaemonArgument == NO_DAEMON || cliDaemonArgument == FOREGROUND) {
             return false;
         }
         return requireDaemon || cliDaemonArgument == DAEMON;
@@ -735,6 +763,12 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
     }
 
     @Override
+    public GradleExecuter withWarningMode(WarningMode warningMode) {
+        this.warningMode = warningMode;
+        return this;
+    }
+
+    @Override
     public GradleExecuter withConsole(ConsoleOutput consoleType) {
         this.consoleType = consoleType;
         return this;
@@ -742,6 +776,47 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
 
     public GradleExecuter withStacktraceDisabled() {
         showStacktrace = false;
+        return this;
+    }
+
+    @Override
+    public GradleExecuter withWelcomeMessageEnabled() {
+        renderWelcomeMessage = true;
+        return this;
+    }
+
+    @Override
+    public GradleExecuter withRepositoryMirrors() {
+        beforeExecute(new Action<GradleExecuter>() {
+            @Override
+            public void execute(GradleExecuter gradleExecuter) {
+                usingInitScript(RepoScriptBlockUtil.createMirrorInitScript());
+            }
+        });
+        return this;
+    }
+
+    @Override
+    public GradleExecuter withGlobalRepositoryMirrors() {
+        beforeExecute(new Action<GradleExecuter>() {
+            @Override
+            public void execute(GradleExecuter gradleExecuter) {
+                TestFile userHome = testDirectoryProvider.getTestDirectory().file("user-home");
+                withGradleUserHomeDir(userHome);
+                userHome.file("init.d/mirrors.gradle").write(RepoScriptBlockUtil.mirrorInitScript());
+            }
+        });
+        return this;
+    }
+
+    @Override
+    public GradleExecuter withPluginRepositoryMirror() {
+        beforeExecute(new Action<GradleExecuter>() {
+            @Override
+            public void execute(GradleExecuter gradleExecuter) {
+                withArgument("-D" + PLUGIN_PORTAL_OVERRIDE_URL_PROPERTY + "=" + gradlePluginRepositoryMirrorUrl());
+            }
+        });
         return this;
     }
 
@@ -780,7 +855,7 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
         FOREGROUND
     }
 
-    private CliDaemonArgument resolveCliDaemonArgument() {
+    protected CliDaemonArgument resolveCliDaemonArgument() {
         for (int i = args.size() - 1; i >= 0; i--) {
             final String arg = args.get(i);
             if (arg.equals("--daemon")) {
@@ -839,17 +914,8 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
         }
 
         if (!searchUpwards) {
-            boolean settingsFoundAboveInTestDir = false;
-            TestFile dir = new TestFile(getWorkingDir());
-            while (dir != null && getTestDirectoryProvider().getTestDirectory().isSelfOrDescendent(dir)) {
-                if (dir.file("settings.gradle").isFile()) {
-                    settingsFoundAboveInTestDir = true;
-                    break;
-                }
-                dir = dir.getParentFile();
-            }
-
-            if (!settingsFoundAboveInTestDir) {
+            // needed for cross-version tests with older versions
+            if (!isSettingsFileAvailable() && distribution.getVersion().getBaseVersion().compareTo(GradleVersion.version("4.5")) < 0) {
                 allArgs.add("--no-search-upward");
             }
         }
@@ -868,9 +934,26 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
             allArgs.add("--console=" + consoleType.toString().toLowerCase());
         }
 
+        if (warningMode != null) {
+            allArgs.add("--warning-mode=" + warningMode.toString().toLowerCase(Locale.ENGLISH));
+        }
+
         allArgs.addAll(args);
         allArgs.addAll(tasks);
         return allArgs;
+    }
+
+    private boolean isSettingsFileAvailable() {
+        boolean settingsFoundAboveInTestDir = false;
+        TestFile dir = new TestFile(getWorkingDir());
+        while (dir != null && getTestDirectoryProvider().getTestDirectory().isSelfOrDescendent(dir)) {
+            if (dir.file("settings.gradle").isFile()) {
+                settingsFoundAboveInTestDir = true;
+                break;
+            }
+            dir = dir.getParentFile();
+        }
+        return settingsFoundAboveInTestDir;
     }
 
     /**
@@ -890,8 +973,15 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
         }
         properties.put(LoggingDeprecatedFeatureHandler.ORG_GRADLE_DEPRECATION_TRACE_PROPERTY_NAME, Boolean.toString(fullDeprecationStackTrace));
 
-        if (useOwnUserHomeServices || (gradleUserHomeDir != null && !gradleUserHomeDir.equals(buildContext.getGradleUserHomeDir()))) {
+        boolean useCustomGradleUserHomeDir = gradleUserHomeDir != null && !gradleUserHomeDir.equals(buildContext.getGradleUserHomeDir());
+        if (useOwnUserHomeServices || useCustomGradleUserHomeDir) {
             properties.put(REUSE_USER_HOME_SERVICES, "false");
+        }
+        if (!useCustomGradleUserHomeDir) {
+            TestFile generatedApiJarCacheDir = buildContext.getGradleGeneratedApiJarCacheDir();
+            if (generatedApiJarCacheDir != null) {
+                properties.put(DefaultGeneratedGradleJarCache.BASE_DIR_OVERRIDE_PROPERTY, generatedApiJarCacheDir.getAbsolutePath());
+            }
         }
         if (!noExplicitTmpDir) {
             if (tmpDir == null) {
@@ -918,6 +1008,14 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
         if (interactive) {
             properties.put(ConsoleStateUtil.INTERACTIVE_TOGGLE, "true");
         }
+
+        if (!searchUpwards) {
+            if (!isSettingsFileAvailable()) {
+                properties.put(BuildLayoutParameters.NO_SEARCH_UPWARDS_PROPERTY_KEY, "true");
+            }
+        }
+
+        properties.put(CommandLineActionFactory.WELCOME_MESSAGE_ENABLED_SYSTEM_PROPERTY, Boolean.toString(renderWelcomeMessage));
 
         return properties;
     }
@@ -951,60 +1049,14 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
         assertCanExecute();
         collectStateBeforeExecution();
         try {
-            return doRun();
+            ExecutionResult result = doRun();
+            if (errorsShouldAppearOnStdout()) {
+                result = new ErrorsOnStdoutScrapingExecutionResult(result);
+            }
+            return result;
         } finally {
             finished();
         }
-    }
-
-    private boolean java7DeprecationWarningShouldExist() {
-        if (org.apache.commons.collections.CollectionUtils.containsAny(args, LOW_LEVELS)) {
-            return currentOrTargetIsJava7();
-        }
-        if (org.apache.commons.collections.CollectionUtils.containsAny(args, HIGH_LEVELS)) {
-            return false;
-        }
-        return currentOrTargetIsJava7();
-    }
-
-    private boolean currentOrTargetIsJava7() {
-        String javaHomeInProperties = javaHomeInProperties();
-        if (javaHomeInProperties != null) {
-            return isJava7Home(javaHomeInProperties);
-        } else if (getJavaHome().equals(Jvm.current().getJavaHome())) {
-            return JavaVersion.current().isJava7();
-        } else {
-            return isJava7Home(getJavaHome().toString());
-        }
-    }
-
-    private String javaHomeInProperties() {
-        File gradleProperties = new File(getWorkingDir(), "gradle.properties");
-        if (gradleProperties.isFile()) {
-            Properties properties = GUtil.loadProperties(gradleProperties);
-            if (properties.getProperty("org.gradle.java.home") != null) {
-                return properties.getProperty("org.gradle.java.home");
-            }
-        }
-        return null;
-    }
-
-    private boolean isJava7Home(String path){
-        for(String jdk7Path: JDK7_PATHS){
-            if(path.contains(jdk7Path)){
-                return true;
-            }
-        }
-        return false;
-    }
-
-    private boolean isJava7DeprecationTruncatedDaemonLog(List<String> lines, int i, String line) {
-        // for forkingIntegrationTests running on Java 7, daemon exit log will fail the tests with following stdout:
-        // ----- Last  20 lines from daemon log file - daemon-6753.out.log -----
-        //    at org.gradle.launcher.daemon.server.exec.ForwardClientInput.execute(ForwardClientInput.java:72)
-        //    at org.gradle.launcher.daemon.server.api.DaemonCommandExecution.proceed(DaemonCommandExecution.java:120)
-        //    ...
-        return line.startsWith("----- Last  ") && i < lines.size() - 1 && STACK_TRACE_ELEMENT.matcher(lines.get(i + 1)).matches();
     }
 
     protected void finished() {
@@ -1021,7 +1073,11 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
         assertCanExecute();
         collectStateBeforeExecution();
         try {
-            return doRunWithFailure();
+            ExecutionFailure executionFailure = doRunWithFailure();
+            if (errorsShouldAppearOnStdout()) {
+                executionFailure = new ErrorsOnStdoutScrapingExecutionFailure(executionFailure);
+            }
+            return executionFailure;
         } finally {
             finished();
         }
@@ -1087,7 +1143,7 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
                 boolean executionFailure = isExecutionFailure(executionResult);
 
                 // for tests using rich console standard out and error are combined in output of execution result
-                if (executionFailure && isErrorOutEmpty(error)) {
+                if (executionFailure) {
                     normalizedOutput = removeExceptionStackTraceForFailedExecution(normalizedOutput);
                 }
 
@@ -1136,21 +1192,6 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
                     if (line.matches(".*use(s)? or override(s)? a deprecated API\\.")) {
                         // A javac warning, ignore
                         i++;
-                    } else if (line.contains(UnsupportedJavaRuntimeException.JAVA7_DEPRECATION_WARNING)) {
-                        if (!java7DeprecationWarningShouldExist()) {
-                            throw new AssertionError(String.format("%s line %d contains unexpected deprecation warning: %s%n=====%n%s%n=====%n", displayName, i + 1, line, output));
-                        }
-                        // skip over stack trace
-                        i++;
-                        while (i < lines.size() && STACK_TRACE_ELEMENT.matcher(lines.get(i)).matches()) {
-                            i++;
-                        }
-                    } else if (isJava7DeprecationTruncatedDaemonLog(lines, i, line)) {
-                        // skip over stack trace
-                        i++;
-                        while (i < lines.size() && STACK_TRACE_ELEMENT.matcher(lines.get(i)).matches()) {
-                            i++;
-                        }
                     } else if (isDeprecationMessageInHelpDescription(line)) {
                         i++;
                     } else if (line.matches(".*\\s+deprecated.*")) {
@@ -1329,49 +1370,34 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
     }
 
     private static LoggingServiceRegistry newCommandLineProcessLogging() {
-        LoggingServiceRegistry loggingServices = new LoggingServiceRegistry() {
-            @Override
-            protected OutputEventRenderer createOutputEventRenderer(Clock clock) {
-                return new VerboseAwareOutputEventRenderer(clock);
-            }
-        };
+        LoggingServiceRegistry loggingServices = LoggingServiceRegistry.newEmbeddableLogging();
         LoggingManagerInternal rootLoggingManager = loggingServices.get(DefaultLoggingManagerFactory.class).getRoot();
-        rootLoggingManager.captureSystemSources();
+//        rootLoggingManager.captureSystemSources();
         rootLoggingManager.attachSystemOutAndErr();
         return loggingServices;
     }
 
-    private static class VerboseAwareOutputEventRenderer extends OutputEventRenderer {
-        VerboseAwareOutputEventRenderer(Clock clock) {
-            super(clock);
-        }
+    @Override
+    public GradleExecuter withTestConsoleAttached() {
+        return withTestConsoleAttached(ConsoleAttachment.ATTACHED);
+    }
 
-        @Override
-        public void attachAnsiConsole(OutputStream outputStream) {
-            if (outputStream instanceof VerboseAwareAnsiOutputStream) {
-                attachAnsiConsole(outputStream, VerboseAwareAnsiOutputStream.class.cast(outputStream).isVerbose());
-            } else {
-                super.attachAnsiConsole(outputStream);
-            }
+    @Override
+    public GradleExecuter withTestConsoleAttached(ConsoleAttachment consoleAttachment) {
+        this.consoleAttachment = consoleAttachment;
+        return configureConsoleCommandLineArgs();
+    }
+
+    protected GradleExecuter configureConsoleCommandLineArgs() {
+        if (consoleAttachment == ConsoleAttachment.NOT_ATTACHED) {
+            return this;
+        } else {
+            return withCommandLineGradleOpts(consoleAttachment.getConsoleMetaData().getCommandLineArgument());
         }
     }
 
-    protected static class VerboseAwareAnsiOutputStream extends OutputStream {
-        private final OutputStream delegate;
-        private boolean verbose;
-
-        VerboseAwareAnsiOutputStream(OutputStream delegate, boolean verbose) {
-            this.delegate = delegate;
-            this.verbose = verbose;
-        }
-
-        public boolean isVerbose() {
-            return verbose;
-        }
-
-        @Override
-        public void write(int b) throws IOException {
-            delegate.write(b);
-        }
+    private boolean errorsShouldAppearOnStdout() {
+        // If stderr is attached to the console or if we'll use the fallback console
+        return (consoleAttachment.isStderrAttached() && consoleAttachment.isStdoutAttached()) || (consoleAttachment == ConsoleAttachment.NOT_ATTACHED && (consoleType == ConsoleOutput.Rich || consoleType == ConsoleOutput.Verbose));
     }
 }
