@@ -17,10 +17,12 @@
 package org.gradle.launcher.daemon
 
 import org.gradle.integtests.fixtures.daemon.DaemonIntegrationSpec
+import org.gradle.integtests.fixtures.timeout.IntegrationTestTimeout
 import org.gradle.launcher.daemon.logging.DaemonMessages
 import org.gradle.test.fixtures.file.LeaksFileHandles
 import org.gradle.util.GradleVersion
-import spock.lang.Timeout
+import org.gradle.util.Requires
+import org.gradle.util.TestPrecondition
 
 import static org.gradle.test.fixtures.ConcurrentTestUtil.poll
 
@@ -59,7 +61,7 @@ task sleep {
         }
     }
 
-    @Timeout(25)
+    @IntegrationTestTimeout(25)
     def "promptly shows decent message when daemon cannot be started"() {
         when:
         executer.withArguments("-Dorg.gradle.jvmargs=-Xyz").run()
@@ -156,6 +158,9 @@ task sleep {
         log.count('error me!') == 1
     }
 
+    //IBM JDK adds a bunch of environment variables that make the foreground daemon not match
+    //Java 9 and above needs --add-opens to make environment variable mutation work
+    @Requires([TestPrecondition.NOT_JDK_IBM, TestPrecondition.JDK8_OR_EARLIER])
     def "foreground daemon log honors log levels for logging"() {
         given:
         file("build.gradle") << """
@@ -170,25 +175,29 @@ task sleep {
         poll(60) { assert daemon.standardOutput.contains(DaemonMessages.PROCESS_STARTED) }
 
         when:
-        def infoBuild = executer.withArguments("-i", "-Dorg.gradle.jvmargs=-ea").run()
+        def infoBuild = executer.withArguments("-i").run()
 
         then:
-        getLogs(executer.daemonBaseDir).size() == 0 //we should connect to the foreground daemon so no log was created
-
-        daemon.standardOutput.count(DaemonMessages.ABOUT_TO_START_RELAYING_LOGS) == 0
-        daemon.standardOutput.count("info me!") == 1
-
         infoBuild.output.count("debug me!") == 0
         infoBuild.output.count("info me!") == 1
 
+        getLogs(executer.daemonBaseDir).size() == 0 //we should connect to the foreground daemon so no log was created
+
+        // Output is delivered asynchronously to the daemon's output, so wait for it to appear
+        poll(60) { assert daemon.standardOutput.count("info me!") == 1 }
+        daemon.standardOutput.count("debug me!") == 0
+        daemon.standardOutput.count(DaemonMessages.ABOUT_TO_START_RELAYING_LOGS) == 0
+
         when:
-        def debugBuild = executer.withArguments("-d", "-Dorg.gradle.jvmargs=-ea").run()
+        def debugBuild = executer.withArguments("-d").run()
 
         then:
-        daemon.standardOutput.count(DaemonMessages.ABOUT_TO_START_RELAYING_LOGS) == 0
-        daemon.standardOutput.count("debug me!") == 1
-
         debugBuild.output.count("debug me!") == 1
+        debugBuild.output.count("info me!") == 1
+
+        poll(60) { assert daemon.standardOutput.count("info me!") == 2 }
+        daemon.standardOutput.count("debug me!") == 1
+        daemon.standardOutput.count(DaemonMessages.ABOUT_TO_START_RELAYING_LOGS) == 0
 
         cleanup:
         daemon.abort()
